[gd_scene load_steps=9 format=3 uid="uid://id7f3bwtp46y"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_dsng1"]
[ext_resource type="Texture2D" uid="uid://civulty2gkjna" path="res://art/conceptsJam01.png" id="2_lw6j8"]
[ext_resource type="FontFile" uid="uid://bcxt1posuy7df" path="res://art/Marion Bridge Demo.otf" id="3_t4gk3"]
[ext_resource type="FontFile" uid="uid://cehn88v5quk2m" path="res://art/Smasher 312 Custom.ttf" id="4_wk7vq"]
[ext_resource type="AudioStream" uid="uid://cumpkq4a2uucc" path="res://art/Menu ideia 1.mp3" id="5_0boyo"]
[ext_resource type="PackedScene" uid="uid://xsdk3apwadf3" path="res://controls.tscn" id="6_nwnlm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mumly"]
atlas = ExtResource("2_lw6j8")
region = Rect2(360, 1000, 600, 900)

[sub_resource type="SpriteFrames" id="SpriteFrames_v0hfn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mumly")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="TitleScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_dsng1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1170.0
offset_bottom = 669.0
color = Color(0.103744, 0.103744, 0.103744, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(214, 304)
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_v0hfn")
autoplay = "default"
frame_progress = 0.555536

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.661
anchor_top = 0.544
anchor_right = 0.661
anchor_bottom = 0.544
offset_left = -194.472
offset_top = -136.512
offset_right = 193.528
offset_bottom = 136.488
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.724643, 0.724643, 0.724643, 1)
theme_override_fonts/font = ExtResource("3_t4gk3")
theme_override_font_sizes/font_size = 100
text = "start"
flat = true

[node name="Controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_t4gk3")
theme_override_font_sizes/font_size = 100
text = "controls"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_t4gk3")
theme_override_font_sizes/font_size = 100
text = "exit
"
flat = true

[node name="Label" type="Label" parent="."]
offset_left = 382.0
offset_top = 101.0
offset_right = 1130.0
offset_bottom = 243.0
theme_override_colors/font_color = Color(0.384314, 0.854902, 0.447059, 1)
theme_override_fonts/font = ExtResource("4_wk7vq")
theme_override_font_sizes/font_size = 70
text = "POISONRAT"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.02

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_0boyo")
parameters/looping = false

[node name="Controls" parent="." instance=ExtResource("6_nwnlm")]

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
